<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizLi</string>
    <string name="next_qeustion"> Next QuizLi</string>
    <string name="incorrect_toast">Incorrect Answer</string>
    <string name="qeustion_president_1"> Who is the first president?</string>
    <string name="qeustion_president_2"> Who is the 3rd USA president?</string>
    <string name="qeustion_president_3">Who was the only President to serve more than two terms?</string>
    <string name="qeustion_president_4">Who was the oldest elected President?</string>
    <string name="qeustion_president_5">Who was the first President to live in the White House?</string>
    <string name="george_washington_description">George Washington was the first President of the United States, the Commander-in-Chief of the Continental Army during the American Revolutionary War, and one of the Founding Fathers of the United States.</string>
    <string name="thomas_jeferson_description">Thomas Jefferson was an American Founding Father, the principal author of the Declaration of Independence, and the third President of the United States</string>
    <string name="franklin_roosevelt_description">Franklin Delano Roosevelt, commonly known by his initials FDR, was an American statesman and political leader who served as the 32nd President of the United States.</string>
    <string name="ronald_reagan_description">Ronald Wilson Reagan was an American actor and politician. He was the 40th President of the United States, and served as the 33rd Governor of California before his presidency.</string>
    <string name="jhon_adams_description">John Adams was the second president of the United States, having earlier served as the first vice president of the United States.</string>
    <string name="details">Nothing</string>
    <string name="successor_text_view">Is successor</string>
    <string name="president">president</string>
    <string name="successor">Successor</string>
    <string name="next_on_the_list">Next President On The List</string>
    <string name="james_madison_description">James Madison, Jr. was an American statesman, political theorist and the fourth President of the United States.</string>
    <string name="harry_truman_description">Harry S. Truman was the 33rd President of the United States. As the final running mate of President Franklin D. Roosevelt in 1944, Truman succeeded to the presidency on April 12, 1945, when Roosevelt died after months of declining health.</string>
    <string name="g_w_bush_description">George Herbert Walker Bush is an American retired politician who served as the 41st President of the United States.</string>
    <string name="game_ruels">Hello to QuizLi!!!</string>
    <string name="game_ruels2">Game rules are:</string>
    <string name="game_ruels3">1: You have to complete all the questions.</string>
    <string name="game_ruels4">2: No picking or cheating.</string>
    <string name="game_ruels5">Information:</string>
    <string name="game_ruels6">After answer one question you will be able to click on the picture for the more details.</string>
    <string name="game_ruels7">Enjoy the Game.</string>
	<string name= "start_game">Start the Game</string>
</resources>