<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hd_blue_back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_ruels"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_ruels2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_ruels3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_ruels4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_ruels5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_ruels6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_ruels7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFACD" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/start_game"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>
